--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <p class="pt-8 text-xl bold">
             Greetings traveler! Welcome to the official homepage of makinDAGames! It's a one-man-army, founded by one of the pioneer game developers of our century; Ahmet Furkan Kurt. Let's get to know this great man a little better!
           </p>
-          <div class="pt-6 flex items-center justify-center">
+          <div class="pt-6 flex items-center justify-start">
             <img class="border-2" src="assets/logo.png" />
           </div>
         </div>
@@ -77,11 +77,13 @@
       </div> 
 
     </div>
+    <custom-footer></custom-footer>
   </div>
   <script src="./components/header.js"></script>
   <script src="./components/photo1.js"></script>
   <script src="./components/photo2.js"></script>
   <script src="./components/photo3.js"></script>
   <script src="./components/photo4.js"></script>
+  <script src="./components/footer.js"></script>
 </body>
 </html>
