--- a/index.html
+++ b/index.html
@@ -8,73 +8,55 @@
 <body>
   <div class="h-full bg-tp1 bg-cover bg-no-repeat bg-bottom">
     <custom-header></custom-header>
-    <div class="p-8 xl:mt-16 m-auto xl:w-5/6 bg-tpGrey xl:border-4 bg-opacity-80 bg-cover bg-no-repeat bg-top-left h-full">
-      
-      <div class="w-full lg:grid grid-cols-2 auto-cols-auto pt-8">
-        <div class="flex items-center justify-center lg:justify-start">
-          <photo-1></photo-1>
-        </div>
-        <div class="font-custom2 bold text-white">
-          <p class="font-custom1 text-4xl bold pt-4 text-tpRed">There and back again...</p>
-          <p class="pt-8 text-xl bold">
-            Greetings traveler! Welcome to the official homepage of makinDAGames! It's a one-man-army, founded by one of the pioneer game developers of our century; Ahmet Furkan Kurt. Let's get to know this great man a little better!
-          </p>
-          <div class="pt-6 flex items-center justify-start">
-            <img class="border-2" src="assets/logo.png" />
-          </div>
-        </div>
-      </div> 
+    <div class="grid grid-cols-4 gap-8 p-8 min-h-screen xl:mt-16 m-auto xl:w-5/6 bg-tpGrey xl:border-4 bg-opacity-80 bg-cover bg-no-repeat bg-top-left h-full">
 
-      <div class="w-full lg:grid grid-cols-2 auto-cols-auto space-y-16 lg:space-y-0 pt-8">
-        <div class="font-custom2 bold text-white">
-          <p class="font-custom1 text-4xl bold pt-4 text-tpGreen">Furkan The Wonder-Kid</p>
-          <p class="pt-8 text-xl bold">
-            Born on a cold winter's evening on 02/12/2002 at the exquisite weight of 4 kilograms. When they asked toddler Furkan what he wanted to be when he was grown up, his answer was a "Robot Engineer" which means he had almost made up his mind on his career path straight from the moment he could talk.<br><br>After 3 years in kindergarten from ages 3 to 6, where he was taught about the great Mustafa Kemal Atatürk's ideals and principles, he went on a wild 8-year ride in Selami Ali Grade-school, later became Selami Ali Mid-School just the year of Furkan's passing to mid-school. There he started making his business network already.<br><br>Towards the end of mid-school, he was enthusiastic about game development, and he was already making text-based games using batch scripting.
-          </p>
-        </div>
-        <div class="flex items-center justify-center lg:justify-end">
-          <photo-2></photo-2>
-        </div>
-      </div>
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/aMile.png" alt=""/>
+      </div>     
 
-      <div class="w-full lg:grid grid-cols-2 auto-cols-auto pt-8">
-        <div class="relative flex items-center justify-center lg:justify-start space-y-16 lg:space-y-0">
-          <div class="absolute text-tpBlue text-4xl bold text-center top-0 left-1/2 transform -translate-x-1/2 translate-y-12 lg:hidden">
-            📍
-          </div>
-          <img src="assets/wanted.png" class="w-128"/>
-        </div>
-        <div class="font-custom2 bold text-white">
-          <p class="font-custom1 text-4xl bold pt-4 text-tpBlue">Furkan The High-Schooler</p>
-          <p class="pt-8 text-xl bold">
-            Followed his path to wisdom at Halide Edip Adıvar Anatolian High School in the heart of Istanbul. This great sanctuary of education opened up many tech-related courses the most important ones being "Robotic Coding" and "Web Development" where Furkan learned Arduino, HTML, CSS, and PHP, later on went on to learn JS to start his career as a Front-End web developer. And that's also the time he bid farewell to Windows, switched to Linux, and started reading about the "Free Software Movement".<br><br>Towards the end of high school, he discovered the Phaser framework and Apache Cordova and started developing Mobile Games. His first mobile game was "A Mile" which did not use the Phaser Framework, just plain JS. ported for Android using Cordova. It's a text-based RPG game with an open-world setting like the ones he did with bash scripting years ago. It was published on Amazon App Store.
-          </p>
-        </div>
-      </div>
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/coiledShadows.png" alt=""/>
+      </div>     
 
-      <div class="w-full lg:grid grid-cols-2 auto-cols-auto space-y-16 lg:space-y-0 pt-8">
-        <div class="font-custom2 bold text-white">
-          <p class="font-custom1 text-4xl bold pt-4 text-tpRed">Furkan The TERMINATOR</p>
-          <p class="pt-8 text-xl bold">
-            After getting into Firat University which is known for it's success in informatics related programs, he kept on working on front-end web and mobile game development jobs, founded makinDAGames and started publishing games on Google Play Store under that name. And it's the goal to get all the mobile games ported to be played on web, here on this site. Work in progress boys!<br><br>He also studied one year in Spain so he is very international. Who knows more, the one who travels much or the one who reads much? Well no worries cause Furkan is on both tables. Check the goodreads profile on the contacts page if you don't take my word.<br><br>The name "makinDAGames" comes with many factors, first of it means "making the games" of course which is what we do, the DAG in the middle in uppercase is a nickname he used around the internet, meaning "mountain" in turkish, that's the reason we have a mountain on the logo, and finally makindagames when thought as a single word, is easy to pronounce for languages that are spoken exactly as written.
-          </p>
-        </div>
-        <div class="flex items-center justify-center lg:justify-end">
-          <photo-3></photo-3>
-        </div>
-      </div>
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/dino.png" alt=""/>
+      </div>     
 
-      <div class="w-full lg:grid grid-cols-2 auto-cols-auto pt-12">
-        <div class="flex items-center justify-center lg:justify-start">
-          <photo-4></photo-4>
-        </div>
-        <div class="font-custom2 bold text-white">
-          <p class="font-custom1 text-4xl bold pt-4 text-tpGreen">Furkan When He Takes A Break From Being A Nerd</p>
-          <p class="pt-8 text-xl bold">
-            Now with all this backstory you may think that this man should be on the grind 24/7 but you would be dead wrong. Furkan has many hobies. To name a few he does capoeria, calisthenics; plays banjo, uke, guitar, even builds cigar box guitars; and even pen spinning and songwriting. Some of these might be presented here in blog page or something probably.
-          </p>
-        </div>
-      </div> 
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/stoutesFamilyGathering.png" alt=""/>
+      </div>     
+
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/barnacleTown.png" alt=""/>
+      </div>     
+
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/wrestling.png" alt=""/>
+      </div>     
+
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/lockesWalkabout.png" alt=""/>
+      </div>     
+
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/3dLocke.png" alt=""/>
+      </div>     
+
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/hangman.png" alt=""/>
+      </div>     
+
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/frog.png" alt=""/>
+      </div>     
+
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/minez.png" alt=""/>
+      </div>     
+
+      <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
+        <img src="./assets/deprem.png" alt=""/>
+      </div>     
 
     </div>
     <custom-footer></custom-footer>
