change columns on mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="h-full bg-tp1 bg-cover bg-no-repeat bg-bottom">
     <custom-header></custom-header>
     <div class="p-8 min-h-screen xl:mt-16 m-auto xl:w-5/6 bg-tpGrey xl:border-4 bg-opacity-80 bg-cover bg-no-repeat bg-top-left h-full">
-      <div class="h-auto grid grid-cols-4 gap-8">
+      <div class="h-auto grid place-items-center grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
 
         <div class="border-4 border-tpRed h-fit w-fit hover:scale-110 transition rounded-xl overflow-hidden">
           <img src="./assets/aMile.png" alt=""/>
